<resources>
    <string name="app_name">6 Вкусов</string>
    <string name="app_version">Версия 1.3</string>

    <!--Для MenuActivity-->
    <string name="menu_title">Меню</string>
    <!--Для MenuActivity END-->

    <!--Для CategoriesActivityV2-->
    <string name="categories_title">Категории</string>
    <!--Для CategoriesActivityV2 END-->

    <!--Для CheckOutActivity-->
    <string name="order_title">Оформление заказа</string>
    <string name="order_name">Имя</string>
    <string name="order_phone">Номер телефона</string>
    <string name="order_street">Улица</string>
    <string name="order_house">Дом</string>
    <string name="order_block">Корпус</string>
    <string name="order_flat">Квартира</string>
    <string name="order_comment">Место для комментария</string>
    <string name="order_button">Заказать</string>
    <!--Для CheckOutActivity END-->

    <!--Для BasketActivity -->
    <string name="basket">Корзина</string>
    <string name="basket_clear">Очистить</string>
    <string name="basket_for_pay">К оплате</string>
    <string name="basket_many_type">руб.</string>
    <string name="basket_product_cost">руб. / 1 шт.</string>
    <string name="basket_button_get_order">Оформить заказ</string>
    <!--Для BasketActivity END-->

    <!--Для RestaurantActivityV2-->
    <string name="rest_menu">Меню</string>
    <string name="rest_info">Доп.инфо</string>
    <string name="rest_comments">Отзывы</string>
    <string name="rest_delivery_price">Доставка:</string>
    <string name="rest_delivery_time">Отзывы</string>
    <string name="rest_time">Время:</string>
    <string name="rest_delivery_price_free">бесплатно</string>
    <string name="rest_min_delivery_price">Заказ от</string>
    <string name="rest_working_time">Время работы:</string>

    <!--Для RestaurantsActivity-->
    <string name="restaurants_title">Рестораны</string>
    <string name="restaurants_time">Время доставки:</string>
    <string name="restaurants_delivery">Минимальный заказ:</string>
    <!--Для RestaurantsActivity END-->

    <!--Для ProfileActivityV2-->
    <string name="profile_title">Профиль</string>
    <!--Для ProfileActivityV2 END-->

    <!--Для RememberActivity-->
    <string name="remember_email">Email</string>
    <string name="remember_title">Восстановить пароль</string>
    <string name="remember_send">Отправить</string>
    <!--Для RememberActivity END-->

    <!--Для LoginActivityV2-->
    <string name="login_email">Email</string>
    <string name="login_password">Пароль</string>
    <string name="login_or">или</string>
    <string name="login_button">Войти</string>
    <string name="login_title">Вход</string>
    <string name="login_remember">Забыли пароль?</string>
    <string name="login_social_text">войдите через социальную сеть</string>
    <string name="login_button_maybe_reg">У Вас еще нет аккаунта? ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <!--Для LoginActivityV2 END-->

    <!--Для OurPointsActivity-->
    <string name="our_points_title">Обменять баллы</string>
    <!--Для OurPointsActivity END-->

    <!--Для InfoActivityV2-->
    <string name="info_title">О программе</string>
    <!--Для InfoActivityV2 END-->

    <!--Для FreeFoodActivityV2-->
    <string name="free_food_title">Еда за баллы</string>
    <!--Для FreeFoodActivityV2 END-->

    <!--Для FavoritesRestaurantsActivity-->
    <string name="favorites_restaurants_title">Любимые рестораны</string>
    <!--Для FavoritesRestaurantsActivity END-->

    <!--Для RegistrationActivity-->
    <string name="reg_title">Регистрация</string>
    <string name="reg_first_name">Имя</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Пароль</string>
    <string name="reg_password_confirm">Повторить пароль</string>
    <string name="reg_promo">Промокод (не обязательно)</string>
    <string name="reg_license_btn">Условия пользовательского соглашения и основных документов</string>
    <string name="reg_license_url">https://6vkusov.by/userAgreement</string>

    <string name="reg_news">Получать новости</string>
    <string name="reg_license">Я прочитал и принимаю</string>
    <string name="reg_button">Зарегистрироваться</string>
    <string name="reg_button_maybe_login">У Вас уже есть созданный профиль? ВОЙДИТЕ</string>
    <!--Для RegistrationActivity END-->


    <!--ChangeUserSettingsActivityV2-->
    <string name="change_user_profile_success">Данные успешно сохранены</string>
    <!--ChangeUserSettingsActivityV2  END-->


    <!--Для REST API-->
    <string name="api_base">https://6vkusov.by</string>
    <string name="api_key">252cbf79f74f36e0df806817847a0e1b</string>
    <string name="api_login">https://6vkusov.by/api/login</string>
    <string name="api_registration">https://6vkusov.by/api/register</string>
    <string name="api_reset_password">https://6vkusov.by/api/reset_password</string>
    <string name="api_categories">https://6vkusov.by/api/categories</string>
    <string name="api_restaurants">https://6vkusov.by/api/restaurants</string>
    <string name="api_user">https://6vkusov.by/api/user</string>
    <string name="api_food">https://6vkusov.by/api/food</string>
    <string name="api_send_order">https://6vkusov.by/api/send_order</string>
    <string name="api_orders">https://6vkusov.by/api/orders</string>
    <string name="api_restaurant_comments">https://6vkusov.by/api/restaurant_comments</string>
    <string name="api_send_comment">https://6vkusov.by/api/send_comment</string>
    <string name="api_add_variants">https://6vkusov.by/api/add_variants</string>
    <string name="api_remove_variant">https://6vkusov.by/api/remove_variant</string>
    <string name="api_remove_item">https://6vkusov.by/api/remove_item</string>
    <string name="api_checkout_cart">https://6vkusov.by/api/checkout_cart</string>
    <string name="api_basket_items">https://6vkusov.by/api/basket_items</string>
    <string name="api_favourite">https://6vkusov.by/api/favourite</string>
    <string name="api_favourites">https://6vkusov.by/api/favourites</string>
    <string name="api_invite">https://6vkusov.by/api/invite</string>
    <string name="api_user_points">https://6vkusov.by/api/user_points</string>
    <string name="api_change_data">https://6vkusov.by/api/change_user_data</string>
    <string name="api_food_points">https://6vkusov.by/api/food_points</string>


    <!--Для REST API END-->

    <!--Errors-->
    <string name="error_server">Ошибка соединения, попробуйте еще раз</string>
    <string name="error_net">Ошибка соединения с интернетом</string>
    <string name="error_friend_exists">Такой пользователь уже зарегистрирован</string>
    <string name="error_friend_limit">Достигнут дневной лимит приглашений</string>
    <string name="error_min_name_length">Слишком короткое имя</string>
    <string name="error_name_only_literals">Имя должно состоять только из букв</string>
    <string name="error_email">Не верный формат email</string>
    <string name="error_min_password_length">Пороль должен состоять не менее чем из 6 символов</string>
    <string name="error_not_equals_passwords">Пороли не совпадают</string>
    <string name="error_max_name_length">Слишком длинное имя</string>
    <string name="error_max_password_length">Слишком длинный пароль</string>
    <string name="error_max_promo_code">Слишком длинный промокод</string>
    <string name="error_promo_code_symbols_and_numbers">Промокод может состоять только из букв и/или цифр</string>
    <string name="error_license_agree">Подтвердите согласие с условием пользовательского соглашения</string>
    <!--Errors end-->


    <!--RestaurantRecycleAdapter-->
    <string name="restaurant_recycle_adapter_work_time">Время работы: </string>
    <string name="restaurant_recycle_adapter_delivery_time">Время доставки:</string>
    <string name="restaurant_recycle_adapter_min_price">Мин. заказ от:</string>
    <!--RestaurantRecycleAdapter end-->

    <!--FRAGMENTS-->

    <!-- ProductFragment -->


    <!-- ProductFragment End -->

    <!-- FRAGMENTS END -->

    <!-- ADAPTERS -->

    <!-- ProductAdapterV2 (product_item_layout.xml) -->
    <string name="product_add_basket">Заказать</string>


    <!-- ProductAdapterV2 End -->

    <!-- PromoAdapter (product_item_layout.xml) -->
    <string name="promo_free_food">К ресторану</string>


    <!-- PromoAdapter End -->

    <!-- ADAPTERS END -->


    <string name="button_change_user_data">Редактировать</string>
    <string name="button_call_friend">Позвать друга</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Facebook id -->
    <string name="facebook_app_id">1508894532517367</string>
    <string name="fb_login_protocol_scheme">fb1508894532517367</string>
    <integer name="com_vk_sdk_AppId">6135951</integer>


    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>

</resources>
