<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <include layout="@layout/action_bar"/>

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_social"
        android:background="@drawable/ic_logo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_social"
        android:text="@string/login_social_text"
        android:layout_width="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="14sp"
        android:padding="5dp"
        android:layout_above="@+id/ll_social"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorGray"/>

    <LinearLayout
        android:id="@+id/ll_social"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/tv_or"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignRight="@+id/et_email"
        android:weightSum="4">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/ic_vk"
            android:background="@color/colorVk"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/ic_facebook_logo"
            android:background="@color/colorFacebook"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/ic_odnoklassniki_logo"
            android:background="@color/colorOdnoklasniki"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/ic_google_plus"
            android:background="@color/colorGoogle"
            android:layout_weight="1"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_or"
        android:text="@string/login_or"
        android:layout_width="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="14sp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/colorGray"/>

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/login_email"
        android:layout_below="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGray"
        android:ems="10"
        android:textSize="14sp"
        android:padding="5dp"
        android:background="@drawable/apptheme_textfield_activated_holo_light"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_below="@+id/et_email"
        android:hint="@string/login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:ems="10"
        android:textSize="14sp"
        android:padding="5dp"
        android:textCursorDrawable="@null"
        android:textColorHint="@color/colorGray"
        android:background="@drawable/apptheme_textfield_activated_holo_light"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignRight="@+id/et_email"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_remember"
        android:background="@android:color/transparent"
        android:text="@string/login_remember"
        android:textColor="@color/colorGray"
        android:textAllCaps="false"
        android:onClick="rememberPressed"
        android:layout_alignRight="@+id/et_password"
        android:layout_alignTop="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <Button
        android:text="@string/login_button"
        android:textColor="@color/colorWhite"
        android:minHeight="40dp"
        android:onClick="loginPressed"
        android:layout_below="@+id/et_password"
        android:background="@drawable/buttons_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:textAllCaps="false"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_marginBottom="10dp" />

    <Button
        android:text="@string/login_button_maybe_reg"
        android:textColor="@color/colorGray"
        android:minHeight="50dp"
        android:textAllCaps="false"
        android:layout_below="@+id/btn_login"
        android:onClick="goToRegistration"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_maybe_reg"
        android:textSize="12sp"
        android:layout_marginBottom="0dp" />

</RelativeLayout>

